--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.8.5
+          terraform_version: "1.1.7"
 
       # 3️⃣ Configure AWS credentials
       - name: Configure AWS Credentials
