--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,7 +2,7 @@ name: Terraform CI/CD with Github Actions
 
 # Workflow triggers manually via GitHub UI
 on: 
-  workflow_dispatch:
+ workflow_dispatch:
     inputs:
       action:
         description: 'Choose Terraform action'
@@ -20,9 +20,9 @@ jobs:
     permissions:
       contents: read
       id-token: write
-
     env:
       AWS_REGION: "eu-north-1"
+      TF_WORKING_DIR: terraform/src       
 
     steps:
       # 1️⃣ Checkout repository
