--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,8 +1,7 @@
-name: Terraform CI/CD with Github Actions
+name: Terraform CI/CD with GitHub Actions
 
-# Workflow triggers manually via GitHub UI
-on: 
- workflow_dispatch:
+on:
+  workflow_dispatch:
     inputs:
       action:
         description: 'Choose Terraform action'
@@ -17,55 +16,56 @@ jobs:
   terraform:
     name: Terraform Apply or Destroy
     runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      id-token: write
+
     env:
       AWS_REGION: "eu-north-1"
-      TF_WORKING_DIR: terraform/src       
+      TF_WORKING_DIR: terraform/src
 
     steps:
       # 1️⃣ Checkout repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Install Terraform
+      # 2️⃣ Set up Terraform
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.3.5"
 
-      # 3️⃣ Configure AWS credentials
+      # 3️⃣ Configure AWS credentials using static secrets
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws-secret-access-key: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws-region: "${{ env.AWS_REGION }}"      
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      # 4️⃣ Terraform Init with backend config
       - name: Terraform Init
-        
-        run: terraform -chdir=terraform/src init     
-      - name: Terraform fmt
-        id: fmt
-        run: terraform fmt -check
-        continue-on-error: true
-      
-        # 5️⃣ Validate Terraform code
+        run: |
+          terraform -chdir="${{ env.TF_WORKING_DIR }}" init \
+            -backend-config="bucket=tf-state-bucket-ci-cd" \
+            -backend-config="key=infra/terraform.tfstate" \
+            -backend-config="region=${{ env.AWS_REGION }}" \
+            -backend-config="encrypt=true"
+
+      # 5️⃣ Terraform Format Check
+      - name: Terraform Format
+        run: terraform -chdir=${{ env.TF_WORKING_DIR }} fmt -check
+
+      # 6️⃣ Terraform Validate
       - name: Terraform Validate
-        run: terraform validate -no-color
+        run: terraform -chdir=${{ env.TF_WORKING_DIR }} validate
 
-      # 6️⃣ Terraform Plan (only for apply)
+      # 7️⃣ Terraform Plan
       - name: Terraform Plan
-        if: github.event.inputs.action == 'apply'
-        run: terraform -chdir=terraform/src  plan -input=false -out=tfplan
+        run: terraform -chdir=${{ env.TF_WORKING_DIR }} plan
 
-      # 7️⃣ Terraform Apply (only for apply)
-      - name: Terraform Apply
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply'
-        run: terraform -chdir=terraform/src apply -auto-approve  tfplan
-
-      # 8️⃣ Terraform Destroy (only for destroy)
-      - name: Terraform Destroy
-        if: github.event.inputs.action == 'destroy'
-        # working-directory: terraform/src
-        run: terraform destroy -auto-approve
+      # 8️⃣ Terraform Apply or Destroy
+      - name: Terraform Apply or Destroy
+        run: |
+          if [ "${{ github.event.inputs.action }}" == "apply" ]; then
+            terraform -chdir=${{ env.TF_WORKING_DIR }} apply -auto-approve
+          else
+            terraform -chdir=${{ env.TF_WORKING_DIR }} destroy -auto-approve
+          fi
