--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
 
       # 5️⃣ Terraform Format Check
       - name: Terraform Format
-        run: terraform -chdir=${{ env.TF_WORKING_DIR }} fmt -check
+        run: terraform -chdir=${{ env.TF_WORKING_DIR }} fmt
 
       # 6️⃣ Terraform Validate
       - name: Terraform Validate
