updated workflow file

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,47 +1,57 @@
 name: Terraform CI/CD with GitHub Actions
 
+# Allow manual run and choose the action
 on:
   workflow_dispatch:
     inputs:
       action:
-        description: 'Choose Terraform action'
+        description: 'Choose Terraform action (Plan must run first for Apply)'
         required: true
-        default: 'apply'
+        default: 'plan_and_apply'
         type: choice
         options:
-          - apply
-          - destroy
+          - plan_and_apply # Runs plan and then apply (consuming the plan)
+          - destroy        # Destroys infrastructure
 
 jobs:
   terraform:
-    name: Terraform Apply or Destroy
+    name: ${{ github.event.inputs.action }} Infrastructure
     runs-on: ubuntu-22.04
+
+    # 🚨 CRITICAL SECURITY STEP: Set permissions for OIDC role assumption
+    permissions:
+      id-token: write # Required for OIDC
+      contents: read  # Required for checkout
 
     env:
       AWS_REGION: "eu-north-1"
       TF_WORKING_DIR: terraform/src
+      TF_PLAN_FILE: tfplan.out # Define the plan file name (saved to repository root)
 
     steps:
       # 1️⃣ Checkout repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Set up Terraform
-      - name: Set up Terraform
+      # 2️⃣ Set up Terraform (using a more modern, stable constraint)
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: "1.3.0"
+          # Use a stable constraint for modern features and stability
+          terraform_version: "~1.8.0" 
 
-      # 3️⃣ Configure AWS credentials using static secrets
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      # 3️⃣ Configure AWS credentials using OIDC (Security Best Practice)
+      # NOTE: Requires configuring a trust relationship in your AWS IAM Role.
+      - name: Configure AWS Credentials using OIDC
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # Replace this with the IAM role ARN to assume in your AWS account
+          role-to-assume: ${{ secrets.AWS_DEPLOYMENT_IAM_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
       # 4️⃣ Terraform Init with backend config
       - name: Terraform Init
+        id: init
         run: |
           terraform -chdir="${{ env.TF_WORKING_DIR }}" init \
             -backend-config="bucket=tf-state-bucket-ci-cd" \
@@ -50,22 +60,30 @@ jobs:
             -backend-config="encrypt=true"
 
       # 5️⃣ Terraform Format Check
-      - name: Terraform Format
+      - name: Terraform Format Check
         run: terraform -chdir=${{ env.TF_WORKING_DIR }} fmt -check
 
       # 6️⃣ Terraform Validate
       - name: Terraform Validate
         run: terraform -chdir=${{ env.TF_WORKING_DIR }} validate
 
-      # 7️⃣ Terraform Plan
-      - name: Terraform Plan
-        run: terraform -chdir=${{ env.TF_WORKING_DIR }} plan
-
-      # 8️⃣ Terraform Apply or Destroy
-      - name: Terraform Apply or Destroy
+      # 7️⃣ Terraform Plan and Save
+      - name: Terraform Plan and Save
+        if: github.event.inputs.action == 'plan_and_apply'
         run: |
-          if [ "${{ github.event.inputs.action }}" == "apply" ]; then
-            terraform -chdir=${{ env.TF_WORKING_DIR }} apply -auto-approve
-          else
-            terraform -chdir=${{ env.TF_WORKING_DIR }} destroy -auto-approve
-          fi
+          # The plan file is saved to the repository root
+          terraform -chdir=${{ env.TF_WORKING_DIR }} plan -out=${{ env.TF_PLAN_FILE }}
+      
+      # 8️⃣ Terraform Apply (Consumes the Plan File)
+      - name: Terraform Apply
+        if: github.event.inputs.action == 'plan_and_apply'
+        run: |
+          # 🐞 CRITICAL FIX: Reference the plan file in the root directory (../) 
+          # so Terraform can find it when executing from the working directory.
+          terraform -chdir=${{ env.TF_WORKING_DIR }} apply -auto-approve ../${{ env.TF_PLAN_FILE }}
+
+      # 9️⃣ Terraform Destroy
+      - name: Terraform Destroy
+        if: github.event.inputs.action == 'destroy'
+        # IMPORTANT: This action is destructive and requires high caution!
+        run: terraform -chdir=${{ env.TF_WORKING_DIR }} destroy -auto-approve
