--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       AWS_REGION: "eu-north-1"
+      ADMIN_IP: "125.209.112.98/32"
       TF_WORKING_DIR: terraform/src
 
     steps:
@@ -47,6 +48,7 @@ jobs:
             -backend-config="key=infra/terraform.tfstate" \
             -backend-config="region=${{ env.AWS_REGION }}" \
             -backend-config="encrypt=true"
+            -backend-config="admin_ip=${{ env.ADMIN_IP }}"
 
       # 5️⃣ Terraform Format Check
       - name: Terraform Format
